# tech_interview_prep

./: pyproject.toml  test.py
algo/: heapq_example.py  sliding_window.py  two_pointer.py
asyncio/: asyncio.md  bounded_semaphore.py  gather_exception_handling.py  generators.py  queue.py  semaphore.py  taskgroup.py  taskgroup_exception_handling.py
concurrency/: concurrency.md  global_interpreter_lock.md  speed_up_cpu.py  speed_up_io.py
database/: database.md
design_patterns/: dataclass.py  decorator.py  factory.py  finite_state_machine.py  observer.py  pub_sub.py  singleton.py
multiprocessing/: multiprocessing.md  polars_example.py  processpoolexecutor.py
multithreading/: daemon.py  local.py  multithreading.md  race_conditions.py  start.py  threadpoolexecutor.py
oop/: encapsulation.py  inheritence.py  oop.md  polymorphism.py
pandas/: pandas.md
polars/: polars.md
redis/: redis.md  redis_example.py
requests/: requests.md
system_design/: api_gateway.md  caching.md  hft.md  message_queue.md  system_design_framework.md
websockets/: prod_websockets.py  websockets.md
