[project]
name = "tech-interview-prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "polars>=1.42.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "websockets>=16.0",
]

[tool.ruff.format]
preview = true
